<resources>
    <string name="app_name">Tysdo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nomeDoLocal">Nome do local</string>
    <string name="rua">Rua</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="pais">Pais</string>
    <string name="bebidaDisponivel">Bebida disponível</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cafe">Café</string>
    <string name="cerveja">Cerveja</string>
    <string name="ambos">Ambos</string>
    <string name="campoObrigatorio">Campo obrigatório!</string>
    <string name="selecione">Selecione a opção</string>
    <string name="selecioneBebida">Selecione a bebida!</string>
    <string name="ok">Ok</string>
    <string name="opcaoInvalida">Opção inválida.</string>
    <string name="enderecoSemLatitudeELong">Endereço sem latitude e longitude.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="mensagemGps">Deseja habilitar o seu GPS para melhor experiência com app?</string>
    <string name="desejaHabilitarGps">Deseja habilitar o gps?</string>
    <string name="naoFoiPossivelProcessaSeuEndereco">Não foi possivel processar seu endereço, por favor tente novamente!</string>
</resources>
