<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <!-- Nome do local
     Endereço (Rua, Nº, Bairro, Cidade, UF, País)
     Latitude e Longitude
     Bebida disponível
     1 - Cerveja
     2 - Café
     3 - Ambos
 -->
    <LinearLayout
        style="@style/macthWrapHorizontal"
        android:visibility="gone">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout style="@style/macthWrapVertial">

                <EditText
                    android:id="@+id/nomeLocal"
                    style="@style/matchMActh"
                    android:hint="@string/nomeDoLocal" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout style="@style/macthWrapHorizontal">

                <android.support.design.widget.TextInputLayout style="@style/peso">

                    <AutoCompleteTextView
                        android:id="@+id/rua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="match_parent"
                        android:hint="@string/rua"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/peso"
                    android:layout_weight="0.3">

                    <EditText
                        android:id="@+id/numero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numero" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout style="@style/macthWrapHorizontal">

                <android.support.design.widget.TextInputLayout style="@style/peso">

                    <EditText
                        android:id="@+id/bairro"
                        style="@style/matchMActh"
                        android:hint="@string/bairro" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/peso">

                    <EditText
                        android:id="@+id/cidade"
                        style="@style/matchMActh"

                        android:hint="@string/cidade"
                        android:inputType="text" />
                    android:hint="@string/bairro" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout style="@style/macthWrapHorizontal">

                <android.support.design.widget.TextInputLayout style="@style/peso">


                    <EditText
                        android:id="@+id/uf"
                        style="@style/matchMActh"
                        android:hint="@string/uf" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/peso">

                    <EditText
                        android:id="@+id/pais"
                        style="@style/matchMActh"

                        android:hint="@string/pais"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout style="@style/macthWrapVertial">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bebidaDisponivel" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>


            <Button
                android:id="@+id/cadastrar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cadastrar"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
